axum-macros/tests/debug_handler/fail/single_wrong_return_tuple.rs
#![allow(unused_parens)]

struct NotIntoResponse;

#[axum::debug_handler]
async fn handler() -> (NotIntoResponse) {
    panic!()
}

fn main() {}
